# l3d

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dependencies.cmake  setup.bat  setup.sh
include/l2d/: data.hpp  effectPass.hpp  fadePass.hpp  options.hpp  program.hpp  renderer.hpp  viewer.hpp
include/shared/: ctx.hpp  effectProgram.hpp  glfwError.hpp  logUtil.hpp  shader.hpp  shaderManager.hpp  timer.hpp  uniforms.hpp
include/shared/dataSource/: base.hpp  time.hpp
shader/2d/: resolution.frag  timeFrame.frag  uvInverted.frag
shader/2d/frag/: fade.frag
shader/2d/frag/effects/: uv.frag
shader/2d/vert/: passthrought.vert
src/l2d/: effectPass.cpp  fadePass.cpp  l2d.cpp  options.cpp  program.cpp  renderer.cpp  viewer.cpp
src/l3d/: l3d.cpp
src/shared/: logUtil.cpp  shader.cpp  shaderManager.cpp  timer.cpp  uniforms.cpp
src/shared/dataSource/: time.cpp
